# sluggen

./: Cargo.toml
data/: adjectives.txt  nouns.txt
src/: lib.rs
